[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://new_theme.tres" type="Theme" id=2]
[ext_resource path="res://new_them1e.tres" type="Theme" id=3]
[ext_resource path="res://EMnac54XYAIvhrQ.png" type="Texture" id=4]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.5
margin_top = -40.0
margin_right = 120.5
margin_bottom = 79.0
theme = ExtResource( 2 )

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 241.0
margin_bottom = 53.0
text = "Start"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
margin_top = 57.0
margin_right = 241.0
margin_bottom = 110.0
text = "Credits"

[node name="DonateButton" type="Button" parent="VBoxContainer"]
margin_top = 114.0
margin_right = 241.0
margin_bottom = 167.0
text = "Donate"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 171.0
margin_right = 241.0
margin_bottom = 224.0
text = "Quit"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -146.0
margin_right = 200.0
margin_bottom = -92.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Big Chungus Attack!"

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -354.0
margin_top = 189.0
margin_right = 354.0
margin_bottom = 281.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "The objective of the game is to jump on as many carrots as
 possible before getting hit by one."
align = 1

[node name="Label3" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "
"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/DonateButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/DonateButton" to="." method="_on_DonateButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
